<resources>
    <string name="app_name">Basketball Score</string>
    <string name="two_point_btn_text">2-Point</string>
    <string name="three_point_btn_text">3-Point</string>
    <string name="free_throw_btn_text">Free Throw</string>
    <string name="foul_btn_text">Commit Foul</string>
    <string name="reset_btn_text">Reset</string>
    <string name="shot_clock_text">Shot Clock</string>
    <string name="team_fouls_text">Team Fouls</string>
    <string name="first_qrtr_text">1</string>
    <string name="second_qrtr_text">2</string>
    <string name="third_qrtr_text">3</string>
    <string name="fourth_qrtr_text">4</string>
    <string name="yes">Continue</string>
    <string name="home_team_default_name">Home</string>
    <string name="home_team_default_score">0</string>
    <string name="home_team_default_fouls">0</string>
    <string name="default_qurter_time">12:00</string>
    <string name="away_team_default_name">Away</string>
    <string name="away_team_default_score">0</string>
    <string name="away_team_default_fouls">0</string>
    <string name="court_image_description">Court Image</string>
    <string name="default_shot_clock">:24</string>
    <string name="start_btn_text">Start</string>
    <string name="pause_btn_text">Pause</string>
</resources>
