<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/home_team"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/home_team_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Home"
                    style="@style/HeaderTextStyle" />
                <TextView
                    android:id="@+id/home_team_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:textSize="24sp"
                    android:text="0"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/team_fouls_text"/>
                <TextView
                    android:id="@+id/home_team_fouls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:textSize="24sp"
                    android:text="0"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/away_team"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/away_team_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/HeaderTextStyle"
                    android:text="Away" />

                <TextView
                    android:id="@+id/away_team_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:textSize="24sp"
                    android:text="0"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/team_fouls_text"/>
                <TextView
                    android:id="@+id/away_team_fouls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:textSize="24sp"
                    android:text="0"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toRightOf="@id/home_team"
                app:layout_constraintRight_toLeftOf="@id/away_team"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/quarter_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="12:00"
                    style="@style/HeaderTextStyle"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp">
                    <TextView
                        android:id="@+id/first_qrtr_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_qrtr_text"
                        android:layout_marginRight="2dp"
                        android:layout_marginLeft="2dp"
                        style="@style/QrtrTextUnselectedStyle"/>
                    <TextView
                        android:id="@+id/second_qrtr_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/second_qrtr_text"
                        android:layout_marginRight="2dp"
                        android:layout_marginLeft="2dp"
                        style="@style/QrtrTextUnselectedStyle"/>
                    <TextView
                        android:id="@+id/third_qrtr_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/third_qrtr_text"
                        android:layout_marginRight="2dp"
                        android:layout_marginLeft="2dp"
                        style="@style/QrtrTextUnselectedStyle"/>
                    <TextView
                        android:id="@+id/fourth_qrtr_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fourth_qrtr_text"
                        android:layout_marginRight="2dp"
                        android:layout_marginLeft="2dp"
                        style="@style/QrtrTextUnselectedStyle"/>
                </LinearLayout>
<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:layout_marginTop="8dp"-->
<!--                    android:text="@string/shot_clock_text"/>-->
<!--                <TextView-->
<!--                    android:id="@+id/shot_clock_text"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:text="24"-->
                    style="@style/HeaderTextStyle"/>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/two_point_home_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center"
                android:text="@string/two_point_btn_text"/>
            <Button
                android:id="@+id/three_point_home_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center"
                android:text="@string/three_point_btn_text"/>
            <Button
                android:id="@+id/free_throw_home_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center"
                android:text="@string/free_throw_btn_text"/>
            <Button
                android:id="@+id/foul_home_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center"
                android:text="@string/foul_btn_text"/>
        </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/court"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:id="@+id/two_point_away_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center"
                    android:text="@string/two_point_btn_text"/>
                <Button
                    android:id="@+id/three_point_away_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center"
                    android:text="@string/three_point_btn_text"/>
                <Button
                    android:id="@+id/free_throw_away_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center"
                    android:text="@string/free_throw_btn_text"/>
                <Button
                    android:id="@+id/foul_away_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center"
                    android:text="@string/foul_btn_text"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/reset_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_btn_text"/>
    </LinearLayout>
</ScrollView>